# cornell-autobike

./: .coverage  .editorconfig  .gitignore  Dockerfile  Dockerfile-OSMnx  Dockerfile-ROS  Dockerfile-navigation  HardToWriteFunctions.py  MainLoop.py  Plot2ForTesting.py  PlotForTesting.py  README.md  READMELIDAR.md  SETUP.md  SETUP2.md  bikeQAgent.py  constants.py  docker-compose.yml  empty_file  getPlayableActions.py  kalman_filter.py  main.py  model.py  pyproject.toml  qAgent.py  qagent.py  qlearning.py  requirements.txt  requirements_dev.txt  requirements_nav.txt  requirements_way.txt  setup.cfg  shell_env.sh  smallExampleQAgent.py  temp  tox.ini  user-mapping.xml
.github/workflows/: build.yml  ci.yml  test.yml  tests.yml
github/workflows/: tests.yml
main_loop/: check_waypoint.py  main.py
src/: __init__.py  main.py
src/djikstra/: README.md  package.xml  setup.cfg  setup.py
src/djikstra/djikstra/: alg.py
src/djikstra/tests/: test_alg.py
src/fake-occupancy/: package.xml  setup.cfg  setup.py
src/fake-occupancy/fake-occupancy/: occupancy_generator.py
src/fake_occupancy/: package.xml  setup.cfg  setup.py
src/fake_occupancy/fake_occupancy/: flow.py  grid_gen.py  noise.py  occupancy_generator.py  vec.py
src/flow/: flow.py  test.py
src/grid_pred/: flow.py  grid_gen.py  helpers.py  noise.py  strategy.md  vec.py
src/occupgrid/: README.md
src/qlearning/: HardToWriteFunctions.py  bikeQAgent.py  bike_qagent.py  exampleqagent.py  gyfhsj.py  main.py  pyproject.toml  qagent.py  receive_data.py  sampling.py  send_data.py  settings.py  smallExampleQAgent.py  small_example_qagent.py  update_matrix.py
src/qlearning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/simulation/: README.md  bike.urdf
src/state_pred/: README.md  README_old.md  __init__.py  bike_sim.py  constants.py  pyproject.toml  sim.py  visual.py
src/unrosified/qlearning/: small_example_qagent.py
src/unrosified/state_pred/: README_old.md
src/waypoints/: README.md  data_fetch.py  package.xml  route.py  setup.cfg  setup.py  show_ithaca.py  test.py
src/waypoints/tests/: test_waypoint_generator.py
src/waypoints/waypoints/: waypoint_generator.py
state_pred/: __init__.py  about.md  constants.py  sim.py  visual.py
state_prediction/: __init__.py  about.md  constants.py  sim.py  visual.py
test/: test_qlearning.py  test_state_pred.py  test_waypoints.py
tests/: test_qlearning.py  testingfile.py
