[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobike_software"
version = "0.0.1"
description = "A sample project with specified dependencies"
authors = [{ name = "Cornell Autobike", email = "cu_autobike@cornell.edu" }]
dependencies = [
	"pip==23.2.1",
	"numpy==1.23.5",
	"scipy==1.10.0",
	"numba",
	"matplotlib==3.6.3",
	"requests",
	"pyroutelib3==1.7.2",
	"tkintermapview==1.29",
	"overpass==0.7",
	"pytest>=6.0",
	"pytest-cov>=2.0",
	"mypy>=0.910",
	"flake8>=3.9",
	"pykalman",
]

[tool.setuptools]
# packages = ["my_package"] # Replace with the actual package(s) in your project
zip-safe = false

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--verbose"

[tool.black]
line-length = 88
target-version = ["py39"]
skip-string-normalization = true

[tool.pylint]
disable = ["W0511"]
max-line-length = 88

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
