[build-system]
requires = ["setuptools==63.2.0", "wheel==0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autobike_software"
version = "0.0.1"
description = "A sample project with specified dependencies"
authors = [{ name = "Cornell Autobike", email = "cu_autobike@cornell.edu" }]
requires-python = "==3.10.12"
dependencies = [
	# Essentials
	"pip==23.2.1",
	"numpy==1.23.5",
	"scipy==1.10.0",
	"numba==0.60.0",
	"matplotlib==3.6.3",
	"requests==2.32.3",
	"pykalman==0.9.7",

	# Mapping and routing
	"pyroutelib3==1.7.2",
	"tkintermapview==1.29",
	"overpass==0.7",
	# This dependency requires some annoying binaries to be installed. See Dockerfile.
	"osmnx==1.9.4",

	# Testing and code quality
	"pytest==8.3.2",
	"pytest-cov==5.0.0",
	"mypy==1.11.1",
	"black==24.8.0",
	"pylint==3.2.6",

	# Type stubs
	"types-requests==2.32.0.20240712",
]

[tool.setuptools]
# packages = ["my_package"] # Replace with the actual package(s) in your project
zip-safe = false

[tool.pytest.ini_options]
testpaths = ["src/*/test*"]
addopts = "--verbose"
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]
skip-string-normalization = true

[tool.pylint]
disable = ["W0511", "C0301"]
max-line-length = 88
ignored-classes = ["nav_msgs.msg.Path", "geometry_msgs.msg.PoseStamped"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
