<?xml version="1.0"?>
<package format="3">
  <name>djikstra</name>
  <version>0.1.0</version>
  <description>Path planning algorithm.</description>
  <maintainer email="fr273@cornell.edu">Falak Raheja</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
